Fix appointment section on mobile

--- a/css/bootstrap/_jumbotron.scss
+++ b/css/bootstrap/_jumbotron.scss
@@ -158,7 +158,7 @@
   height: 170px;
   visibility: hidden;
   @media(max-width: 768px) {
-    margin-top: -150px;
+    margin-top: -135px;
     height: 170px;
   }
 }
